Добавлены новые тесты Appium